# S22_Junior_Tenezaca-

./: .gitignore  CMakeLists.txt  Project.sln  unique.txt
Debug/: glad.idb
Engine/: CMakeLists.txt  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EngineApp.cpp  EngineApp.h  EngineUtil.h  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h  pch.h
Engine/specificGLFW/: GlfwWindow.cpp  GlfwWindow.h
Engine/specificOpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
Project/: CMakeLists.txt  Entity.cpp  Project.vcxproj  Project.vcxproj.filters  ProjectApp.cpp  ProjectApp.h  main.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
